import java.time.LocalDate;

public class Otro extends ObjetoArte {

    public Otro(int idArte, String titulo, String descripcion, LocalDate anioCreacion, String pais, String cultura, String epoca, String estilo) {
        super(idArte, titulo, descripcion, anioCreacion, pais, cultura, epoca, estilo);
    }
}
